Mobile Spinner Fix

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -204,6 +204,9 @@ ul {
     margin: 0px;
     padding: 0px;
   }
+  .spinner {
+    left: 26% !important;
+  }
   h1 {
     line-height: 28px;
   }
