--- a/client/src/App.css
+++ b/client/src/App.css
@@ -180,6 +180,22 @@ ul {
   font-weight: 500;
 }
 
+.active-false {
+  background: #c3e09d;
+  padding: 5px 15px;
+  border-radius: 4px;
+  color: #000;
+  font-weight: 500;
+}
+
+.active-true {
+  background: #7eb802;
+  padding: 5px 15px;
+  border-radius: 4px;
+  color: #000;
+  font-weight: 500;
+}
+
 /********************************RESPONSIVE_CODE*************************************/
 @media only screen and (max-width: 1024px) {
   .launch-body {
